...
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Delete History">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="Ylj-Y8-PS5" style="IBUITableViewCellStyleDefault" id="eQR-xL-dWQ">
                                        <rect key="frame" x="0.0" y="387.5" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Delete Account"/>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="7UB-4J-oOc" id="rUd-xd-tCW"/>
...
